add the 2 straggler files that I forgot to save the first time

--- a/src/layouts/PhotoPost.astro
+++ b/src/layouts/PhotoPost.astro
@@ -1,9 +1,9 @@
 ---
 // src/layouts/PhotoPost.astro
-import type { CollectionEntry } from 'astro:content';
+// import type { CollectionEntry } from 'astro:content';
 import BaseLayout from './BaseLayout.astro';
 import FormattedDate from '../components/FormattedDate.astro';
-import PhotoGallery from '../components/PhotoGallery.astro';
+// import PhotoGallery from '../components/PhotoGallery.astro';
 
 type ExifData = {
   aperture?: string;
