checkpoint before search

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,11 +8,11 @@ import { SITE_TITLE } from '../consts';
 		<h2><a href="/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
 			<HeaderLink href="/">Home</HeaderLink>
-			<HeaderLink href="/blog">Blog</HeaderLink>
+			<HeaderLink href="/general">General</HeaderLink>
 			<HeaderLink href="/tech">Development</HeaderLink>
 			<HeaderLink href="/photo">Photography</HeaderLink>
 			<HeaderLink href="/bible">Bible & Prophecy</HeaderLink>
-			<HeaderLink href="/language">Foreign Languages</HeaderLink>
+			<HeaderLink href="/language">Language Learning</HeaderLink>
 			<HeaderLink href="/about">About</HeaderLink>
 		</div>
 		<div class="social-links">
