--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -10,10 +10,13 @@ import HeaderLink from './HeaderLink.astro';
           <a href="/" class="text-xl font-bold text-gray-800">Bryan Vold</a>
         </div>
         <div class="hidden sm:ml-6 sm:flex sm:space-x-8">
+          <HeaderLink href="/">Home</HeaderLink>
+          <HeaderLink href="/general">General</HeaderLink>
           <HeaderLink href="/tech">Development</HeaderLink>
           <HeaderLink href="/photo">Photography</HeaderLink>
-          <HeaderLink href="/bible">Bible Prophecy</HeaderLink>
-          <HeaderLink href="/language">Languages</HeaderLink>
+          <HeaderLink href="/bible">Bible & Prophecy</HeaderLink>
+          <HeaderLink href="/language">Language Learning</HeaderLink>
+          <HeaderLink href="/about">About</HeaderLink>
         </div>
       </div>
     </div>
