--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
-import Search from 'astro-pagefind/components/Search';
+// import Search from 'astro-pagefind';
 ---
 
 <!doctype html>
@@ -15,7 +15,7 @@ import Search from 'astro-pagefind/components/Search';
 		<Header />
 		<main>
 			<h4>Search</h4>
-			<Search id="search" className="pagefind-ui" uiOptions={{ showImages: false }} />
+			<!-- <Search id="search" className="pagefind-ui" uiOptions={{ showImages: false }} /> -->
 			<br/>
 			<h1>🧑‍🚀 Hello, Astronaut!</h1>
 			<p>
