--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -39,5 +39,21 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
       )}
     </div>
     <slot />
+    <script src="https://giscus.app/client.js"
+        data-repo="bvold/frontend"
+        data-repo-id="R_kgDONCvMyw"
+        data-category="Announcements"
+        data-category-id="DIC_kwDONCvMy84CkJwV"
+        data-mapping="url"
+        data-strict="1"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="en"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+    </script>
   </article>
 </BaseLayout>
