--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,7 @@
 ---
 import HeaderLink from './HeaderLink.astro';
 import { SITE_TITLE } from '../consts';
+import ThemeIcon from './ThemeIcon.astro';
 ---
 
 <header>
@@ -44,6 +45,7 @@ import { SITE_TITLE } from '../consts';
 				>
 			</a>
 		</div>
+		<ThemeIcon />
 	</nav>
 </header>
 <style>
