--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,6 +1,7 @@
 ---
 // src/components/Navigation.astro
 import HeaderLink from './HeaderLink.astro';
+import ThemeIcon from './ThemeIcon.astro';
 ---
 <nav class="bg-white shadow-md">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -17,6 +18,7 @@ import HeaderLink from './HeaderLink.astro';
           <HeaderLink href="/bible">Bible & Prophecy</HeaderLink>
           <HeaderLink href="/language">Language Learning</HeaderLink>
           <HeaderLink href="/about">About</HeaderLink>
+          <ThemeIcon />
         </div>
       </div>
     </div>
