--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,9 +11,9 @@ import Search from 'astro-pagefind/components/Search';
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
-	<body>
+	<body class="min-h-screen flex flex-col bg-[var(--background-primary)]">
 		<Header />
-		<main>
+		<main class="flex-1">
 			<h4>Search</h4>
 			<Search className="pagefind-ui" uiOptions={{ showImages: false }} />
 			<br/>
