--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -23,7 +23,9 @@ const { title, description } = Astro.props;
     <Header />
     <!-- <Navigation /> -->
     <main class="flex-grow max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
-      <slot />
+      <div class="prose">
+        <slot />
+      </div>
     </main>
     <Footer />
   </body>
