--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,7 +13,7 @@ import { ACTION_ERROR_CODES } from 'astro:actions';
 	</head>
 	<body>
 		<Header />
-		<main>
+		<main class="prose flex-1 max-w-none mx-auto px-4 sm:px-6 lg:px-8 py-8">
 			<h3>About Me</h4>
 			<p>
 			Hello! I'm Bryan, a developer with an insatiable curiosity, always eager to dive deep into new projects and ideas. This blog is my space to not only document my thoughts and discoveries but also share them with the world. I stumbled upon Astro after initially learning about Hugo, and building this site became a thrilling adventure in itself. I wanted a platform where I could explore a variety of passions—from technology to photography, Bible prophecy, and language learning.
