--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -3,6 +3,7 @@ import type { CollectionEntry } from 'astro:content';
 import BaseLayout from './BaseLayout.astro';
 import FormattedDate from '../components/FormattedDate.astro';
 import HeroImage from '../components/HeroImage.astro';
+import GiscusComments from '~/components/GiscusComments.astro';
 
 type Props = CollectionEntry<'general'>['data'] |
              CollectionEntry<'tech'>['data'] | 
@@ -14,12 +15,12 @@ const { title, description, pubDate, updatedDate, heroImage, frontmatter } = Ast
 ---
 <BaseLayout title={title} description={description}>
   <article class="prose lg:prose-xl dark:prose-dark mx-auto">
-    <HeroImage 
+    <!-- <HeroImage 
       title={frontmatter.title}
       category={frontmatter.category}
       date={new Date(frontmatter.date)}
     />
-  
+   -->
     <h1 class="text-4xl font-bold mb-4 text-gray-900 dark:text-gray-300">{title}</h1>
     <div class="flex gap-2 text-gray-500 dark:text-gray-400 mb-8">
       <FormattedDate date={pubDate} />
@@ -32,21 +33,6 @@ const { title, description, pubDate, updatedDate, heroImage, frontmatter } = Ast
     <div class="text-gray-800 dark:text-gray-300">
       <slot />
     </div>
-    <script src="https://giscus.app/client.js"
-        data-repo="bvold/frontend"
-        data-repo-id="R_kgDONCvMyw"
-        data-category="Announcements"
-        data-category-id="DIC_kwDONCvMy84CkJwV"
-        data-mapping="url"
-        data-strict="1"
-        data-reactions-enabled="1"
-        data-emit-metadata="0"
-        data-input-position="top"
-        data-theme="preferred_color_scheme"
-        data-lang="en"
-        data-loading="lazy"
-        crossorigin="anonymous"
-        async>
-    </script>
+    <GiscusComments />
   </article>
 </BaseLayout>
