--- a/src/layouts/PhotoPost.astro
+++ b/src/layouts/PhotoPost.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from './BaseLayout.astro';
 import FormattedDate from '../components/FormattedDate.astro';
+import GiscusComments from '../components/GiscusComments.astro';
 
 type ExifData = {
   dateTaken?: string;
@@ -233,22 +234,7 @@ function formatDate(dateString: string | undefined): string {
       </div>
     )}
   </article>
-  <script src="https://giscus.app/client.js"
-        data-repo="bvold/frontend"
-        data-repo-id="R_kgDONCvMyw"
-        data-category="Announcements"
-        data-category-id="DIC_kwDONCvMy84CkJwV"
-        data-mapping="url"
-        data-strict="1"
-        data-reactions-enabled="1"
-        data-emit-metadata="0"
-        data-input-position="top"
-        data-theme="preferred_color_scheme"
-        data-lang="en"
-        data-loading="lazy"
-        crossorigin="anonymous"
-        async>
-</script>
+  <GiscusComments />
 </BaseLayout>
 
 <style>
