--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Search from 'astro-pagefind/components/Search';
 	</head>
 	<body class="min-h-screen flex flex-col bg-[var(--background-primary)]">
 		<Header />
-		<main class="flex-1">
+		<main class="prose flex-1 max-w-none mx-auto px-4 sm:px-6 lg:px-8 py-8">
 			<h4>Search</h4>
 			<Search className="pagefind-ui" uiOptions={{ showImages: false }} />
 			<br/>
